# ee-vpms

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
.github/: copilot-instructions.md
api/: Cargo.toml
api/src/: main.rs
api/src/handlers/: mod.rs
api/src/handlers/owner/: test.rs
crates/api/: Cargo.toml  config.toml  config.yaml
crates/api/src/: lib.rs  main.rs  test.rs
crates/api/src/handlers/: mod.rs  owner.rs
crates/api/src/handlers/owner/: mod.rs  test.rs
crates/api/tests/: handler_tests.rs  lib_tests.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  error.rs  lib.rs  owner_service.rs
crates/core/src/db/: mod.rs  test.rs
crates/core/src/entity/: mod.rs  owner.rs
crates/core/src/entity/owner/: mod.rs  test.rs
crates/core/src/error/: mod.rs  test.rs
crates/core/src/owner_service/: mod.rs  test.rs
crates/core/src/service/: mod.rs
crates/core/src/service/owner/: mod.rs  test.rs
crates/core/tests/: db_tests.rs  entity_tests.rs  error_tests.rs  owner_service_tests.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/proto/: owner.proto
crates/grpc/src/: lib.rs  main.rs
crates/grpc/src/owner/: mod.rs
crates/grpc/tests/: grpc_tests.rs
crates/owner/: Cargo.toml  config.toml  config.yaml
crates/owner/proto/: owner.proto
crates/owner/src/: lib.rs  main.rs
crates/owner/src/db/: mod.rs  test.rs
crates/owner/src/entity/: mod.rs
crates/owner/src/grpc/: mod.rs
crates/owner/src/service/: mod.rs  test.rs
crates/shared/: Cargo.toml
crates/shared/src/: consts.rs  lib.rs
crates/shared/src/config/: mod.rs  test.rs
crates/shared/src/error/: test.rs
crates/shared/src/service/: mod.rs  test.rs
rpc/owner/: Cargo.toml  build.rs  config.yaml
rpc/owner/src/: conf.rs  lib.rs  main.rs  pb.rs
rpc/owner/src/db/: mod.rs
rpc/owner/src/entity/: mod.rs  test.rs
rpc/owner/src/grpc/: mod.rs
rpc/owner/src/service/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/error/: test.rs
