[package]
name = "ee-vpms-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
