[package]
name = "ee-vpms-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ee-vpms-core = { path = "../core" }
ee-vpms-shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
