[package]
name = "ee-vpms-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = "0.12"
prost = "0.13"
ee-vpms-owner = { path = "../owner" }
ee-vpms-shared = { path = "../shared" }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"
