[package]
name = "ee-vpms-owner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ee-vpms-shared = { path = "../shared" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
