[package]
name = "ee-vpms-owner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
ee-vpms-utils = { path = "../../utils" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
tonic-prost-build = { version = "0.14.5" }
